=== HEAD

* Support using any expression as the argument to Symbol#like (jeremyevans)

* Much better support for multiple schemas in PostgreSQL (jeremyevans) (#243)

* The first argument to Model#initalize can no longer be nil, it must be a hash if it is given (jeremyevans)

* Remove Sequel::Model.lazy_load_schema= setting (jeremyevans)

* Lazily load model instance options such as raise_on_save_failure, for better performance (jeremyevans)

* Make Model::Validiation::Errors more Rails-compatible (jeremyevans)

* Refactor model hooks for performance (jeremyevans)

* Major performance enhancement when fetching rows using PostgreSQL (jeremyevans)

* Don't typecast serialized columns in models (jeremyevans)

* Add Array#sql_array to handle ruby arrays of all two pairs as SQL arrays (jeremyevans) (#245)

* Add ComplexExpression#== and #eql?, for checking equality (rubymage) (#244)

* Allow full text search on PostgreSQL to include rows where a search column is NULL (jeremyevans)

* PostgreSQL full text search queries with multiple columns are joined with space to prevent joining border words to one (michalbugno)

* Don't modify a dataset's cached column information if calling #each with an option that modifies the columns (jeremyevans)

* The PostgreSQL adapter will now generally default to using a unix socket in /tmp if no host is specified, instead of a tcp socket to localhost (jeremyevans)

* Make Dataset#sql call Dataset#select_sql instead of being an alias, to allow for easier subclassing (jeremyevans)

* Split Oracle adapter into shared and unshared parts, so Oracle is better supported when using JDBC (jeremyevans)

* Fix automatic loading of Oracle driver when using JDBC adapter (bburton333) (#242)

=== 2.6.0 (2008-10-11)

* Make the sqlite adapter respect the Sequel.datetime_class setting, for timestamp and datetime types (jeremyevans)

* Enhance the CASE statement support to include an optional expression (jarredholman)
